@@ -214,6 +214,9 @@ if ($var1 = &'getconf('script_alias')) {
 if (&'getconf('symbols')) {
 	$'symbols = 1;
 }
+if (&'getconf('dynamic')) {
+	$'dynamic = 1;
+}
 if (($var1 = &'getconf('body_begin')) && ($var2 = &'getconf('body_end'))) {
 	$'body_begin  = $var1;
 	$'body_end    = $var2;
@@ -534,7 +537,7 @@ if ($'htags_options) {
 #
 # options check.
 #
-$'aflag = $'cflag = $'fflag = $'Fflag = $'gflag = $'nflag = $'sflag = $'Sflag = $'vflag = $'wflag = '';
+$'aflag = $'cflag = $'Dflag = $'fflag = $'Fflag = $'gflag = $'nflag = $'sflag = $'Sflag = $'vflag = $'wflag = '';
 $show_version = 0;
 $show_help = 0;
 $map_file = 1;
@@ -560,6 +563,8 @@ while ($ARGV[0] =~ /^-/) {
 		$'aflag = 'a';
 	} elsif ($opt =~ /^--compact$/) {
 		$'cflag = 'c';
+	} elsif ($opt =~ /^--dynamic$/) {
+		$'dynamic = 1;
 	} elsif ($opt =~ /^--each-line-tag$/) {
 		;		# for backward compatibility.
 	} elsif ($opt =~ /^--form$/) {
@@ -611,13 +616,14 @@ while ($ARGV[0] =~ /^-/) {
 	} elsif ($opt =~ /^--/) {
 		print STDERR $usage_const, "\n";
 		exit 1;
-	} elsif ($opt =~ /[^-acdfFglmnosStvwtd]/) {
+	} elsif ($opt =~ /[^-acdDfFglmnosStvwtd]/) {
 				# include 'l' for backward compatibility.
 		print STDERR $usage_const, "\n";
 		exit 1;
 	} else {
 		if ($opt =~ /a/) { $'aflag = 'a'; }
 		if ($opt =~ /c/) { $'cflag = 'c'; }
+		if ($opt =~ /D/) { $'Dflag = 'd'; }
 		if ($opt =~ /f/) { $'fflag = 'f'; }
 		if ($opt =~ /F/) { $'Fflag = 'F'; }
 		if ($opt =~ /g/) { $'gflag = 'g'; }
@@ -666,6 +672,9 @@ if ($'cflag && !&'usable('gzip')) {
 	print STDERR "Warning: 'gzip' command not found. -c option ignored.\n";
 	$'cflag = '';
 }
+if ($'Dflag) {
+	$'dynamic = 1;
+}
 if ($'oflag) {
 	$'other_files = 1;
 }
@@ -675,6 +684,9 @@ if ($'sflag) {
 if (!$title) {
 	@cwd = split('/', &'getcwd);
 	$title = $cwd[$#cwd];
+}
+if ($'Dflag && $'Sflag) {
+	&'error("Current implementation doesn't allow both -D(--dynamic) and the -S(--secure-cgi).");
 }
 #
 # load style sheet.
@@ -741,7 +753,7 @@ delete $ENV{'GTAGSLIBPATH'};
 #
 # check directories
 #
-if ($'fflag || $'cflag) {
+if ($'fflag || $'cflag || $'dynamic) {
 	if ($'cgidir && ! -d $'cgidir) {
 		&'error("'$'cgidir' not found.");
 	}
@@ -796,13 +808,13 @@ mkdir($dist, 0777) || &'error("cannot make directory '$dist'.") if (! -d $dist);
 foreach $d (&'get_dirlist()) {
 	mkdir("$dist/$d", 0775) || &'error("cannot make HTML directory") if (! -d "$dist/$d");
 }
-if ($'cgi && ($'fflag || $'cflag)) {
+if ($'cgi && ($'fflag || $'cflag || $'dynamic)) {
 	mkdir("$dist/cgi-bin", 0775) || &'error("cannot make cgi-bin directory") if (! -d "$dist/cgi-bin");
 }
 #
 # (1) make CGI program
 #
-if ($'cgi && $'fflag) {
+if ($'cgi && ($'fflag || $'dynamic)) {
 	if ($'cgidir) {
 		print STDERR "[", &'date, "] ", "(1) making CGI program ...\n" if ($'vflag);
 		&makeprogram("$cgidir/global.cgi");
@@ -932,7 +944,7 @@ if ($'vflag && $'cgi && ($'cflag || $'fflag)) {
 		print STDERR " gzipped files. (Please see 'HTML/.htaccess')\n";
 		print STDERR "\n";
 	}
-	if ($'fflag) {
+	if ($'fflag || $'dynamic) {
 		local($path) = ($'action =~ /^\//) ? "DOCUMENT_ROOT$'action" : "HTML/$'action";
 		print STDERR " You need to setup http server so that $path\n";
 		print STDERR " is executed as a CGI script. (DOCUMENT_ROOT means WWW server's data root.)\n";
@@ -968,15 +980,21 @@ sub makeprogram {
 # IF YOU ARE A ADMINISTRATOR OF THIS SITE, PLEASE SETUP HTTP SERVER
 # SO THAT THIS SCRIPT CAN BE EXECUTED AS A CGI COMMAND. THANK YOU.
 #------------------------------------------------------------------
-$htmlbase = $ENV{'HTTP_REFERER'};
-if ($htmlbase) {
-	$htmlbase =~ s/\/[^\/]*$//;
-} else {
-	$htmlbase = '..';
-}
 print "Content-type: text/html\n\n";
 print "@html_begin@\n";
 print "@body_begin@\n";
+$htmlbase = $ENV{'HTTP_REFERER'};
+if (!$htmlbase) {
+	print "<H1><FONT COLOR=#cc0000>Error</FONT></H1>\n";
+	print "<H3>Your browser doesn't send HTTP_REFERER.</H3>\n";
+	print "</BODY>\n";
+	print "</HTML>\n";
+	exit 0;
+}
+$htmlbase =~ s!/[^\/]+$!!;		# remove file name.
+$htmlbase =~ s!/defines$!!;
+$htmlbase =~ s!/S$!!;
+$htmlbase =~ s!/$!!;
 if (! -x '@globalpath@' || ! -x '@btreeoppath@') {
 	print "<H1><FONT COLOR=#cc0000>Error</FONT></H1>\n";
 	print "<H3>Server side command not found. <A HREF=$htmlbase/mains.@normal_suffix@>[return]</A></H3>\n";
@@ -999,6 +1017,7 @@ if ($form{'pattern'} eq '') {
 	exit 0;
 }
 $pattern = $form{'pattern'};
+$from = $form{'from'};
 $flag = '';
 $words = 'definitions';
 if ($form{'type'} eq 'reference') {
@@ -1043,6 +1062,11 @@ if ($flag eq 'g' || $flag eq 'I') {
 		print "@html_end@\n";
 		exit 0;
 	}
+} else {
+	if (-f "../../GTAGS" &&
+	(($flag eq 'r' && -f "../../GRTAGS") || $flag eq 's' && -f "../../GSYMS")) {
+		chdir("../..");
+	}
 }
 #
 # fork and exec global(1) to avoid command substitutions in $pattern.
@@ -1064,7 +1088,7 @@ while (<PIPE>) {
 	$cnt++;
 	($tag, $lno, $filename) = split;
 	chop($fileno = `@btreeoppath@ -K "./$filename" GPATH`);
-	s!($tag)!<A HREF=$htmlbase/@SRCS@/$fileno.@HTML@#$lno>$1<\/A>!;
+	s!($tag)!<A HREF=$htmlbase/S/$fileno.@HTML@#$lno>$1<\/A>!;
 	print;
 }
 close(PIPE);
@@ -1269,7 +1293,9 @@ sub makedupindex {
 	# Gtags with --write option create file and put data for each
 	# duplicate entries index.
 	#
-	open(FILE, "| $'gtags --write") || &'error("cannot fork.");
+	if (!$'dynamic) {
+		open(FILE, "| $'gtags --write") || &'error("cannot fork.");
+	}
 	foreach $db (&'get_taglist()) {
 		local($kind) = $kind{$db};
 		local($option) = &'get_option($db);
@@ -1286,7 +1312,7 @@ sub makedupindex {
 			if ($prev ne $tag) {
 				$count++;
 				print STDERR " [$count] adding $kind $tag\n" if ($'vflag);
-				if ($writing) {
+				if ($writing && !$'dynamic) {
 					print FILE &'list_end;
 					print FILE $'body_end, "\n";
 					print FILE $'html_end, "\n";
@@ -1309,22 +1335,26 @@ sub makedupindex {
 					# N<file>	create normal file.
 					# C<file>	create gzipped file.
 					#
-					print FILE "$flag$dist/$dir/$count.$'HTML\n";
-					$writing = 1;
-					print FILE $'html_begin, "\n";
-					print FILE &'set_header($tag);
-					print FILE $'body_begin, "\n";
-					print FILE &'list_begin;
-					print FILE &'list_body($srcdir, $first_line);
+					if (!$'dynamic) {
+						print FILE "$flag$dist/$dir/$count.$'HTML\n";
+						$writing = 1;
+						print FILE $'html_begin, "\n";
+						print FILE &'set_header($tag);
+						print FILE $'body_begin, "\n";
+						print FILE &'list_begin;
+						print FILE &'list_body($srcdir, $first_line);
+					}
 					$first_line = '';
 				}
-				print FILE &'list_body($srcdir, $_);
+				if (!$'dynamic) {
+					print FILE &'list_body($srcdir, $_);
+				}
 			}
 		}
 		close(LIST);
 		$'file_count++;
 		if ($?) { &'error("'$command' failed."); }
-		if ($writing) {
+		if (!$'dynamic && $writing) {
 			print FILE &'list_end;
 			print FILE $'body_end, "\n";
 			print FILE $'html_end, "\n";
@@ -1334,7 +1364,9 @@ sub makedupindex {
 			&cache'put($db, $prev, $first_line);
 		}
 	}
-	close(FILE);
+	if (!$'dynamic) {
+		close(FILE);
+	}
 	$count;
 }
 #
@@ -1428,12 +1460,27 @@ sub makedefineindex {
 		local($url);
 		if ($line =~ /^ (.*)/) {
 			$url = "$'DEFS/$1.$'HTML";
+			if ($'dynamic) {
+				local($cgi) = $'action;
+				if ($'action !~ /^\// && $'aflag) {
+					$cgi = "../" . $'action;
+				}
+				$url = "${cgi}?pattern=$tag&type=definitions";
+			} else {
+				$url = "$'DEFS/$1.$'HTML";
+				if ($'aflag) {
+					$url = "../" . $url;
+				}
+			}
 		} else {
 			local($tag, $lno, $filename) = split(/[ \t]+/, $line);
 			$filename = &'path2url($filename);
 			$url = "$'SRCS/$filename#$lno";
+			if ($'aflag) {
+				$url = "../" . $url;
+			}
 		}
-		print "<LI><A HREF=", ($'aflag) ? "../" : "", $url, " TARGET=$target>$tag</A>\n";
+		print "<LI><A HREF=$url TARGET=$target>$tag</A>\n";
 		if ($'map_file) {
 			print MAP "$tag\t$url\n";
 		}
@@ -2027,15 +2074,30 @@ sub src2html {
 				if (defined($line)) {
 					local($href);
 					if ($line =~ /^ (.*)/) {
-						local($dir);
-						if ($TYPE eq 'R') {
-							$dir = $'DEFS;
-						} elsif ($TYPE eq 'Y') {
-							$dir = $'SYMS;
-						} else {	# 'D' or 'M'
-							$dir = $'REFS;
+						local($url);
+						if ($'dynamic) {
+							local($cgi) = ($'action =~ /^\//) ? $'action : "../$'action";
+							local($type);
+							if ($db eq 'GTAGS') {
+								$type = 'definitions';
+							} elsif ($db eq 'GRTAGS') {
+								$type = 'reference';
+							} else {
+								$type = 'symbol';
+							}
+							$url = "${cgi}?pattern=$TAG&type=$type";
+						} else {
+							local($dir);
+							if ($TYPE eq 'R') {
+								$dir = $'DEFS;
+							} elsif ($TYPE eq 'Y') {
+								$dir = $'SYMS;
+							} else {	# 'D' or 'M'
+								$dir = $'REFS;
+							}
+							$url = "../$dir/$1.$'HTML";
 						}
-						$href = "<A HREF=../$dir/$1.$'HTML";
+						$href = "<A HREF=$url";
 						$href .= " onMouseOver=\"show('$TYPE',-1,'')\"" if ($'use_javascript);
 						$href .= ">$TAG</A>";
 					} else {
